--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,13 @@
 ---
 env:
   node: true
+extend: "eslint:recommended"
 parser: "babel-eslint"
+plugins: [
+  "react"
+]
 rules:
-  strict: 0
   indent: [2, 4]
   quotes: [2, 'single']
-  no-unused-vars: 0 // see https://github.com/babel/babel-eslint/issues/21
-  yoda: 0
-  no-underscore-dangle: 0
-  dot-notation: 1
-  no-unused-expressions: 0
+  dot-notation: [2, {allowKeywords: false}]
 
